Update dependencys and .net Version to 6

--- a/Stasistium.Generator/Stasistium.Generator.csproj
+++ b/Stasistium.Generator/Stasistium.Generator.csproj
@@ -46,4 +46,12 @@
 		<None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
 	</ItemGroup>
 
+
+	<ItemGroup>
+	  <PackageReference Update="GitVersion.MsBuild" Version="5.9.0">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
+	</ItemGroup>
+
 </Project>
