--- a/Stasistium.Razor/Stasistium.Razor.csproj
+++ b/Stasistium.Razor/Stasistium.Razor.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<TargetFramework>net6.0</TargetFramework>
 	</PropertyGroup>
 
 	<Import Project="$(SolutionDir)Common.targets" />
@@ -23,6 +23,13 @@
 
 	<ItemGroup>
 		<None Include="build/Stasistium.Razor.targets" pack="true" PackagePath="build"></None>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Update="GitVersion.MsBuild" Version="5.9.0">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
 	</ItemGroup>
 
 </Project>
