--- a/Stasistium.Sass/Stasistium.Sass.csproj
+++ b/Stasistium.Sass/Stasistium.Sass.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<TargetFramework>net6.0</TargetFramework>
 	</PropertyGroup>
 
 	<Import Project="$(SolutionDir)Common.targets" />
@@ -12,7 +12,7 @@
 
 
 	<ItemGroup>
-		<PackageReference Include="SharpScss" Version="1.4.0" />
+		<PackageReference Include="SharpScss" Version="2.0.0" />
 	</ItemGroup>
 
 
@@ -20,6 +20,16 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\Stasistium.Generator\Stasistium.Generator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+	</ItemGroup>
+
+
+
+
+	<ItemGroup>
+	  <PackageReference Update="GitVersion.MsBuild" Version="5.9.0">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
 	</ItemGroup>
 	
 </Project>
