--- a/Stasistium.Markdown/Stasistium.Markdown.csproj
+++ b/Stasistium.Markdown/Stasistium.Markdown.csproj
@@ -7,7 +7,7 @@
 	<Import Project="$(SolutionDir)Common.targets" />
 
 	<ItemGroup>
-		<PackageReference Include="AdaptMark" Version="0.1.34-g5658af5a89" />
+		<PackageReference Include="AdaptMark" Version="0.1.36-gb79ee54a2e" />
 	</ItemGroup>
 
 	<ItemGroup>
